--- a/Atividade-10/index.html
+++ b/Atividade-10/index.html
@@ -1,112 +1,217 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="img/quiz.png" type="image/x-icon">
-    <title>Quiz</title>
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="position-absolute top-50 start-50 translate-middle">
-            <div id="escolha-dificuldade">
-                <div>
-                    <h1 class="h1 text-white">Choose your difficulty My love s2</h1>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+            crossorigin="anonymous"
+        />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="index.css" />
+        <link rel="shortcut icon" href="img/quiz.png" type="image/x-icon" />
+        <title>Quiz</title>
+    </head>
+    <body>
+        <div class="container-fluid">
+            <div class="position-absolute top-50 start-50 translate-middle">
+                <div id="escolha-dificuldade">
+                    <div>
+                        <h1 class="h1 text-white">Choose your difficulty</h1>
+                    </div>
+                    <div class="row align-items-center">
+                        <button
+                            id="b-facil"
+                            class="btn btn-outline-success col m-1"
+                            type="button"
+                        >
+                            Easy
+                        </button>
+                        <button
+                            id="b-medio"
+                            class="btn btn-outline-warning col m-1"
+                            type="button"
+                        >
+                            Medium
+                        </button>
+                        <button
+                            id="b-dificil"
+                            class="btn btn-outline-danger col m-1"
+                            type="button"
+                        >
+                            Hard
+                        </button>
+                    </div>
                 </div>
-                <div class="row align-items-center">
-                    <button id="b-facil" class="btn btn-outline-success col m-1" type="button">Easy</button>
-                    <button id="b-medio" class="btn btn-outline-warning col m-1" type="button">Medium</button>
-                    <button id="b-dificil" class="btn btn-outline-danger col m-1" type="button">Hard</button>
+                <div id="tela-categoria" class="collapse">
+                    <div>
+                        <h1 class="h1 text-white">Choose your category</h1>
+                    </div>
+                    <select
+                        id="escolha-categoria"
+                        class="form-select col-12"
+                        aria-label="Default select example"
+                        placeholder="Categorias"
+                    >
+                        <option value="0" disabled selected>Random</option>
+                        <option value="0">Random</option>
+                    </select>
+                    <div class="row align-items-center m-0">
+                        <button
+                            id="b-submit"
+                            class="btn btn-outline-light mt-4"
+                            type="button"
+                        >
+                            Play
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div id="tela-categoria" class="collapse">
+
+            <div
+                id="jogo"
+                class="collapse position-absolute top-50 start-50 translate-middle row align-items-center justify-content-center"
+            >
+                <div class="col-12 progress p-0 mb-5" style="height: 5px">
+                    <div
+                        id="progress"
+                        class="progress-bar bg-success"
+                        role="progressbar"
+                        style="width: 100%"
+                        aria-valuenow="100"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                    ></div>
+                </div>
+
+                <div class="col-12">
+                    <h1 id="pergunta" class="h1 text-white"></h1>
+                </div>
+
+                <div id="alternativas" class="col-12"></div>
+
+                <div
+                    id="armazenar"
+                    class="col-12 d-flex mt-3 justify-content-center"
+                >
+                    <button
+                        id="b-armazenar"
+                        class="btn btn-secondary col-10 collapse"
+                    >
+                        Store question
+                    </button>
+                </div>
                 <div>
-                    <h1 class="h1 text-white">Choose your category
+                    <h1
+                        id="pontuacao-atual"
+                        class="text-white h5 text-center mt-5 fs-6"
+                    >
+                        Score: 00
                     </h1>
                 </div>
-                <select id="escolha-categoria" class="form-select col-12" aria-label="Default select example" placeholder="Categorias">
-                    <option value="0" disabled selected>Random</option>
-                    <option value="0">Random</option>
-                </select>
-                <div class="row align-items-center m-0">
-                    <button id="b-submit" class="btn btn-outline-light mt-4" type="button">Play</button>
+            </div>
+
+            <div
+                id="opcao"
+                class="position-absolute top-50 start-50 translate-middle row align-items-center justify-content-center collapse"
+            >
+                <div class="col-12">
+                    <h1 class="h1 text-white">
+                        Do you want to answer your stored question now ?
+                    </h1>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button id="b-sim" class="btn m-1 flex-fill">YES</button>
+                    <button id="b-nao" class="btn m-1 flex-fill">NO</button>
                 </div>
             </div>
-        </div>
 
-        <div id="jogo" class="collapse position-absolute top-50 start-50 translate-middle row align-items-center justify-content-center">
+            <div
+                id="fim-jogo"
+                class="position-absolute top-50 start-50 translate-middle row align-items-center justify-content-center collapse"
+            >
+                <div
+                    class="row align-items-center border border-white rounded m-2 p-1"
+                >
+                    <h1 class="h3 text-white col m-0 p-0">Final score</h1>
+                    <h1
+                        id="pontuacao"
+                        class="col text-white h5 text-center align-middle"
+                    >
+                        21
+                    </h1>
+                </div>
+                <div
+                    class="row align-items-center border border-white rounded m-2 p-1"
+                >
+                    <h1 class="h3 text-white col m-0 p-0">
+                        Number of questions answered
+                    </h1>
+                    <h1
+                        id="perguntas-respondidas"
+                        class="col text-white h5 text-center align-middle"
+                    >
+                        1
+                    </h1>
+                </div>
+                <div
+                    class="row align-items-center border border-white rounded m-2 p-1"
+                >
+                    <h1 class="h3 text-white col m-0 p-0">Number of hits</h1>
+                    <h1
+                        id="acertos"
+                        class="col text-white h5 text-center align-middle"
+                    >
+                        41
+                    </h1>
+                </div>
+                <div
+                    class="row align-items-center border border-white rounded m-2 p-1"
+                >
+                    <h1 class="h3 text-white col m-0 p-0">
+                        Selected difficulty
+                    </h1>
+                    <h1
+                        id="dificuldade-selecionada"
+                        class="col text-white h5 text-center align-middle"
+                    >
+                        3
+                    </h1>
+                </div>
+                <div
+                    class="row align-items-center border border-white rounded m-2 p-1"
+                >
+                    <h1 class="h3 text-white col m-0 p-0">Selected category</h1>
+                    <h1
+                        id="categoria-selecionada"
+                        class="col text-white h5 text-center align-middle"
+                    >
+                        41
+                    </h1>
+                </div>
 
-            <div class="col-12 progress p-0 mb-5" style="height: 5px;">
-                <div id="progress" class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-
-            <div class="col-12">
-                <h1 id="pergunta" class="h1 text-white"></h1>
-            </div>
-
-            <div id="alternativas" class="col-12">
-            </div>
-
-            <div id="armazenar" class="col-12 d-flex mt-3 justify-content-center">
-                <button id="b-armazenar" class="btn btn-secondary col-10 collapse">Store question</button>
-            </div>
-            <div>
-                <h1 id="pontuacao-atual" class="text-white h5 text-center mt-5 fs-6">Score: 00</h1>
-            </div>
-
-        </div>
-
-        <div id="opcao" class="position-absolute top-50 start-50 translate-middle row align-items-center justify-content-center collapse">
-            <div class="col-12">
-                <h1 class="h1 text-white">Do you want to answer your stored question now ?</h1>
-            </div>
-            <div class="d-flex justify-content-center">
-                <button id="b-sim" class="btn m-1 flex-fill">
-                    YES
+                <button id="b-novo-jogo" class="btn btn-outline-light m-1">
+                    New game
                 </button>
-                <button id="b-nao" class="btn m-1 flex-fill">
-                    NO
-                </button>
             </div>
         </div>
 
-        <div id="fim-jogo" class="position-absolute top-50 start-50 translate-middle row align-items-center justify-content-center collapse">
-            <div class="row align-items-center border border-white rounded m-2 p-1">
-                <h1 class="h3 text-white col m-0 p-0">Final score</h1>
-                <h1 id="pontuacao" class="col text-white h5 text-center align-middle">21</h1>
-            </div>
-            <div class="row align-items-center border border-white rounded m-2 p-1">
-                <h1 class="h3 text-white col m-0 p-0">Number of questions answered</h1>
-                <h1 id="perguntas-respondidas" class="col text-white h5 text-center align-middle">1</h1>
-            </div>
-            <div class="row align-items-center border border-white rounded m-2 p-1">
-                <h1 class="h3 text-white col m-0 p-0">Number of hits</h1>
-                <h1 id="acertos"class="col text-white h5 text-center align-middle">41</h1>
-            </div>
-            <div class="row align-items-center border border-white rounded m-2 p-1">
-                <h1 class="h3 text-white col m-0 p-0">Selected difficulty
-                </h1>
-                <h1 id="dificuldade-selecionada" class="col text-white h5 text-center align-middle">3</h1>
-            </div>
-            <div class="row align-items-center border border-white rounded m-2 p-1">
-                <h1 class="h3 text-white col m-0 p-0">Selected category</h1>
-                <h1 id="categoria-selecionada"class="col text-white h5 text-center align-middle">41</h1>
-            </div>
-            
-            <button id="b-novo-jogo" class="btn btn-outline-light m-1">New game</button>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="index.js"></script>
-</body>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="index.js"></script>
+    </body>
 </html>
 
 <!--
