--- a/Atividade-10/index.html
+++ b/Atividade-10/index.html
@@ -60,10 +60,7 @@
                         class="form-select col-12"
                         aria-label="Default select example"
                         placeholder="Categorias"
-                    >
-                        <option value="0" disabled selected>Random</option>
-                        <option value="0">Random</option>
-                    </select>
+                    ></select>
                     <div class="row align-items-center m-0">
                         <button
                             id="b-submit"
