--- a/Atividade-10/index.html
+++ b/Atividade-10/index.html
@@ -24,6 +24,9 @@
         <div class="container-fluid">
             <div class="position-absolute top-50 start-50 translate-middle">
                 <div id="escolha-dificuldade">
+                    <h1 id="titulo" class="text-white text-center mb-5">
+                        QUIZ
+                    </h1>
                     <div>
                         <h1 class="h1 text-white">Choose your difficulty</h1>
                     </div>
