--- a/Atividade-11/front/index.html
+++ b/Atividade-11/front/index.html
@@ -83,10 +83,8 @@
             </nav>
         </div>
 
-        <div
-            class="container-fluid position-absolute top-50 start-50 translate-middle"
-        >
-            <h1 class="text-white text-center mt-5">Welcome to ULT</h1>
+        <div class="container-fluid mt-5">
+            <h1 class="text-white text-center">Welcome to ULT</h1>
             <p class="text-white text-center fs-5">
                 we are a team of talanted designers making websites with
                 Bootstrap
