--- a/Atividade-11/front/sobre.html
+++ b/Atividade-11/front/sobre.html
@@ -1,66 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+            crossorigin="anonymous"
+        />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <title>Ult</title>
+    </head>
 
-    <title>Ult</title>
-
-</head>
-
-<body style="background-color: #198754">
-    <div class="container-fluid bg-dark">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                    class="bi bi-building text-white me-1 ms-2" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694 1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z" />
-                    <path
-                        d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
-                </svg>
-                <a class="navbar-brand me-5">Ult</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" aria-current="page" href="/">Home</a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link  active" href="/sobre">About us</a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="/contato/whatsapp">Contact us</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2 " type="search">
-                        <button class="btn btn-outline-success" type="button">Search</button>
-                    </form>
+    <body style="background-color: #198754">
+        <div class="container-fluid bg-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        fill="currentColor"
+                        class="bi bi-building text-white me-1 ms-2"
+                        viewBox="0 0 16 16"
+                    >
+                        <path
+                            fill-rule="evenodd"
+                            d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694 1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z"
+                        />
+                        <path
+                            d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z"
+                        />
+                    </svg>
+                    <a class="navbar-brand me-5">Ult</a>
+                    <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                    >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div
+                        class="collapse navbar-collapse"
+                        id="navbarSupportedContent"
+                    >
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item mx-2">
+                                <a class="nav-link" aria-current="page" href="/"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="nav-item mx-2">
+                                <a class="nav-link active" href="/sobre"
+                                    >About us</a
+                                >
+                            </li>
+                            <li class="nav-item mx-2">
+                                <a class="nav-link" href="/contato/whatsapp"
+                                    >Contact us</a
+                                >
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" />
+                            <button
+                                class="btn btn-outline-success"
+                                type="button"
+                            >
+                                Search
+                            </button>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </div>
-    
-    <div class="container-fluid position-absolute top-50 start-50 translate-middle"> 
-        <h1 class="text-center text-white">About us</h1>
-        <p class="text-white text-center fs-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure numquam esse similique inventore atque, pariatur est hic dolor sequi amet tempora excepturi culpa ullam harum nam at. Repellat, non aut!</p>
-        <p class="text-white text-center fs-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta nobis cumque illo et voluptas ducimus perferendis dicta. Cumque iste corporis minus eaque, eos, velit expedita hic temporibus molestias consectetur reiciendis?</p>
-        <p class="text-white text-center fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, blanditiis laborum doloremque obcaecati enim illo unde hic accusantium, sapiente saepe reprehenderit dolorum omnis eaque quae quam, asperiores sunt praesentium atque!</p>
-        <p class="text-white text-center fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, earum? Facilis dicta, ex dolore quae nesciunt ipsam ab error distinctio. Consequatur neque labore sapiente laborum saepe deserunt non ipsam tenetur.</p>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+            </nav>
+        </div>
 
-    </script>
-</body>
-
+        <div class="container-fluid mt-5">
+            <h1 class="text-center text-white">About us</h1>
+            <p class="text-white text-center fs-5">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure
+                numquam esse similique inventore atque, pariatur est hic dolor
+                sequi amet tempora excepturi culpa ullam harum nam at. Repellat,
+                non aut!
+            </p>
+            <p class="text-white text-center fs-5">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta
+                nobis cumque illo et voluptas ducimus perferendis dicta. Cumque
+                iste corporis minus eaque, eos, velit expedita hic temporibus
+                molestias consectetur reiciendis?
+            </p>
+            <p class="text-white text-center fs-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Ducimus, blanditiis laborum doloremque obcaecati enim illo unde
+                hic accusantium, sapiente saepe reprehenderit dolorum omnis
+                eaque quae quam, asperiores sunt praesentium atque!
+            </p>
+            <p class="text-white text-center fs-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos, earum? Facilis dicta, ex dolore quae nesciunt ipsam
+                ab error distinctio. Consequatur neque labore sapiente laborum
+                saepe deserunt non ipsam tenetur.
+            </p>
+        </div>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
